knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/texcellency__DHCAcctFieldMapping__c/fields/texcellency__Destination__c.field-meta.xml
<CustomField>
    <fullName>texcellency__Destination__c</fullName>
    <description>Standard or custom field name on Account object to which the value in Source field will be copied.</description>
    <inlineHelpText>Standard or custom field name on Account object to which the value in Source field will be copied.</inlineHelpText>
    <label>Destination Field</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>