knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/texcellency__DHCAcctFieldMapping__c/fields/texcellency__Enabled__c.field-meta.xml
<CustomField>
    <fullName>texcellency__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if a mapping is enabled or not. If a mapping is disabled, source value will not be copied into the destination field during a sync or copy data operation.</description>
    <inlineHelpText>Indicates if a mapping is enabled or not. If a mapping is disabled, source value will not be copied into the destination field during a sync or copy data operation.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>