knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/texcellency__DHCAcctFieldMapping__c/fields/texcellency__Source__c.field-meta.xml
<CustomField>
    <fullName>texcellency__Source__c</fullName>
    <description>Name of the source field in DefinitiveHC database entity.</description>
    <inlineHelpText>Name of the source field in DefinitiveHC database entity.</inlineHelpText>
    <label>Source Field</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>